[project]
name = "Execute Controller - Skill Group"
version = "0.1.0"
description = ""
authors = [{ name = "John Doe", email = "john.doe@composabl.com" }]
dependencies = [
    "composabl-core",
    "numpy"

]

[composabl]
type = "skill-controller"
entrypoint = "execute_skill_group.controller:Controller"
