[project]
name = "Otimization Benchmark Controller"
version = "0.1.0"
description = ""
authors = [{ name = "John Doe", email = "john.doe@composabl.com" }]
dependencies = [
    "composabl-core",
    "numpy",
    "gekko"

]

[composabl]
type = "skill-controller"
entrypoint = "optimization_benchmark.controller:Controller"
